--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.1.0",
-        "tcesarpinho/php-sigep": "dev-master"
+        "tcesarpinho/php-sigep": ">=0.0.1"
     },
     "autoload": {
         "files": [
