--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bleez/correios",
-    "description": "N/A",
+    "description": "Modulo correios magento 2",
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0"
     },
