--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,12 @@
 {
     "name": "bleez/correios",
     "description": "Modulo correios magento 2",
-    "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0"
-    },
     "type": "magento2-module",
-    "version": "0.0.1",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
+    "version": "0.0.2",
     "require": {
-        "php": ">=5.1.0",
-        "tcesarpinho/php-sigep": ">=0.0.1"
+        "php": "~5.6.0|~7.0.0",
+        "tcesarpinho/php-sigep": ">=0.0.1",
+        "cagartner/phpquery": ">=0.9.8"
     },
     "autoload": {
         "files": [
