--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": "~5.6.0|~7.0.0",
         "tcesarpinho/php-sigep": ">=0.0.1",
-        "cagartner/phpquery": ">=0.9.8"
+        "cagartner/phpquery": ">=0.9.8",
+        "ext-soap": "*",
     },
     "autoload": {
         "files": [
