--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "version": "0.0.3",
     "require": {
         "php": "~5.6.0|~7.0.0",
-        "tcesarpinho/php-sigep": ">=0.0.1",
+        "stavarengo/php-sigep": ">=0.0.1",
         "cagartner/phpquery": ">=0.9.8",
         "ext-soap": "*"
     },
