--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,11 @@
             "Bleez\\Correios\\": ""
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "repositories": [
+       {
+        "type": "git",
+        "url": "https://github.com/stavarengo/php-sigep.git"
+       }
+    ]
 }
