--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "~5.6.0|~7.0.0",
         "stavarengo/php-sigep": ">=0.0.1",
+        "stavarengo/php-sigep-fpdf": ">=0.0.1",
         "cagartner/phpquery": ">=0.9.8",
         "ext-soap": "*"
     },
@@ -22,6 +23,10 @@
        {
         "type": "git",
         "url": "https://github.com/stavarengo/php-sigep.git"
+       },
+       {
+        "type": "git",
+        "url": "https://github.com/stavarengo/php-sigep-fpdf.git"
        }
     ]
 }
